# moneyholic

./: .env  .gitignore  Dockerfile  README.md  celery.py  docker-compose.yml  hardware_requirements.txt  http-proxy.conf   locustfile.py  moneyholic.txt  out.txt  pyproject.toml  serializers.py  signals.py  tasks.py
.github/workflows/: moneyholic-actions.yml
newscraper/: admin.py  apps.py  celery.py  filter_string.py  map_reduce.py  models.py  saver.py  serializers.py  tasks.py  urls.py  views.py
newscraper/fixtures/: article_fixtures.json  myfixtures.json  symbol_fixtures.json
newscraper/migrations/: 0001_initial.py  0002_auto_20220913_1428.py  0003_article_external_id.py  0004_symbol_is_enabled.py  0005_alter_article_published_at.py  0006_alter_article_published_at.py  0007_alter_article_published_at.py  0008_auto_20220927_0940.py  0009_auto_20220927_0943.py  0010_auto_20221005_0752.py  0011_articlecomment_text.py  0012_articlecomment_is_deleted.py  0013_articlereaction_commentreaction.py  0014_commentreaction_article.py  0015_auto_20221006_1430.py  0016_wordcount.py  0017_alter_wordcount_count.py  0018_alter_wordcount_word.py  0019_auto_20221010_1324.py  0020_alter_articlecomment_article_commented.py  0021_auto_20221012_1153.py  0022_keyword.py  0023_auto_20221017_0812.py  0024_auto_20221024_0939.py
newscraper/test/: factories.py  factories_meta.py  test_admins.py  test_apps.py  test_mapreduce.py  test_models.py  test_pagination.py  test_serializers.py  test_views.py
requirements/: prod.txt
src/: urls.py  wsgi.py
src/common/: signals.py
src/config/: __init__.py  celery.py  common.py  local.py
src/users/: views.py
src/users/test/: test_serializers.py  test_views.py
