[tool.poetry]
name = "moneyholic"
version = "0.1.0"
description = ""
authors = ["adnasal <adnasalkovic@hotmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pytz="==2022.5"
Django="==3.2.12"
gunicorn="==20.1.0"
newrelic="==8.4.0"
django-dotenv="==1.4.2"
django-3-jet="==1.0.8"
celery="==5.2.7"
virtualenv="==20.16.6"
psycopg2-binary="==2.9.5"
redis="==4.3.4"
django-model-utils="==4.2.0"
django_unique_upload="==0.2.1"
django-redis="==5.2.0"
django-summernote="==0.8.20.0"
django-celery-beat="==2.0.0"
flower="==1.2.0"
django-activity-stream="==1.4.1"
django-money="==3.0.0"
djangorestframework="==3.14.0"
djangorestframework-simplejwt="==5.2.2"
Markdown="==3.3.4"
beautifulsoup4="==4.11.1"
feedparser="==6.0.10"
lxml="==4.9.1"
drf-yasg="==1.21.4"
django-filter="==22.1"
django-cors-headers="==3.13.0"
django-rest-passwordreset="==1.3.0"
django-rest-swagger="==2.2.0"
easy-thumbnails="==2.8.3"
django-auto-prefetching="==0.2.11"
social-auth-core="==4.3.0"
social-auth-app-django="==5.0.0"
ipython="==8.5.0"
sentry-sdk="==1.10.1"
django-inlinecss="==0.3.0"
django-storages="==1.13.1"
boto3="==1.25.2"
django-health-check="==3.17.0"
nltk = "^3.7"
setuptools="==57.5.0"



[tool.poetry.dev-dependencies]
ipdb="==0.13.9"
black="==22.10.0"
django-extensions="==3.2.1"
django-debug-toolbar="==3.7.0"
pre-commit="==2.20.0"
factory-boy="==3.2.1"
django-nose="==1.4.7"
coverage="==6.5.0"
unittest-prettify="==1.0.post4"
locust="==2.12.2"
